--- a/TODO-List-app/src/main/resources/public/views/heroes/heroes.html
+++ b/TODO-List-app/src/main/resources/public/views/heroes/heroes.html
@@ -2,10 +2,10 @@
 </header-component>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-3">
-			<h3>Deposits10 - Historical (by currency)</h3>
+		<div class="col-xs-6">
+			<h3>Deposits12 - Historical (by currency)</h3>
 		</div>
-		<div class="col-xs-3 col-xs-offset-6">
+		<div class="col-xs-3 col-xs-offset-3>
 			<date-range-picker-component start-date="$ctrl.displayFrom"
 				end-date="$ctrl.displayTo"
 				on-update="$ctrl.updateDates(startDate, endDate)">
