--- a/TODO-List-app/src/main/webapp/views/heroes/heroes.html
+++ b/TODO-List-app/src/main/webapp/views/heroes/heroes.html
@@ -40,13 +40,11 @@
 					<thead>
 						<tr>
 							<th>Name</th>
-							<th>Name</th>
 							<th>AlterEgo</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="x in names">
-							<td>{{ x.name }}</td>
 							<td>{{ x.name }}</td>
 							<td>{{ x.alterEgo }}</td>
 						</tr>
@@ -91,5 +89,9 @@
 		
 		
 	</div>
+<div class="row">
+	<input  ng-model="dummytext"> </input>
 
+		
+	</div>
 </div>
