--- a/WebJar-app/src/main/webapp/views/reports/cash-balances.html
+++ b/WebJar-app/src/main/webapp/views/reports/cash-balances.html
@@ -1,10 +1,10 @@
 
 <h4>{{report.sections}}</h4>
-<table st-table="display_records"  st-safe-src="employees" class="table table-striped">
+<table st-table="section.table"  st-safe-src="employees" st-set-filter="myStrictFilter" class="table table-striped">
 	<thead>
 		<tr>
 			<th></th>
-			<th ng-repeat="colheader in report.headers">{{colheader | uppercase}}</th>
+			<th st-sort="{{colheader}}" ng-repeat="colheader in report.headers">{{colheader | uppercase}}</th>
 		</tr>
 	</thead>
 	<tbody ng-repeat="(sectionKey, section) in report.sections">
