--- a/WebJar-app/src/main/webapp/views/fxcalc/fxcalc.html
+++ b/WebJar-app/src/main/webapp/views/fxcalc/fxcalc.html
@@ -10,6 +10,20 @@
 </div>
 <div class="modal-body">
 	<form class="form-horizontal" role="form">
+		
+				
+		<div class="form-group">
+			<label class="col-sm-3 control-label">Trade Date<sup
+				class="sup-color">*</sup></label>
+
+			<div class="col-sm-8">
+				<input type="text" ng-model="tradeDate" 
+					placeholder="Trade Date" class="form-control">
+			</div>
+			<span class="help-button" uib-tooltip="Employee name"
+				tooltip-placement="left">?</span>
+		</div>
+	
 		<div class="form-group">
 			<label class="col-sm-3 control-label">Buy Amount <sup
 				class="sup-color">*</sup></label>
@@ -84,7 +98,7 @@
 	</form>
 </div>
 <div class="modal-footer model-grey-color">
-	<button class="btn btn-success" ng-click="updateEmp()">
+	<button class="btn btn-success" ng-click="updateBuyAmount()">
 		<i class="glyphicon glyphicon-floppy-save"></i> Update
 	</button>
 	<button class="btn btn-danger" ng-click="cancelModal()">
