--- a/WebJar-app/src/main/webapp/views/fxcalc/fxcalc.html
+++ b/WebJar-app/src/main/webapp/views/fxcalc/fxcalc.html
@@ -23,6 +23,18 @@
 			<span class="help-button" uib-tooltip="Employee name"
 				tooltip-placement="left">?</span>
 		</div>
+
+		<div class="form-group">
+			<label class="col-sm-3 control-label">Expiry Date<sup
+				class="sup-color">*</sup></label>
+
+			<div class="col-sm-8">
+				<input type="text" ng-model="expiryDate" 
+					placeholder="Trade Date" class="form-control">
+			</div>
+			<span class="help-button" uib-tooltip="Employee name"
+				tooltip-placement="left">?</span>
+		</div>
 	
 		<div class="form-group">
 			<label class="col-sm-3 control-label">Buy Amount <sup
