--- a/WebJar-app/src/main/webapp/views/smartchartpie/smartchartpie.html
+++ b/WebJar-app/src/main/webapp/views/smartchartpie/smartchartpie.html
@@ -4,7 +4,8 @@
 		<canvas id="pie" class="chart chart-pie" 
 		      chart-data="data"
 		      chart-labels="labels"
-		      chart-options="options">
+		      chart-options="options"
+		      chart-dataset-override="datasetOverride">
 		</canvas>        
     </div>
 </div>
