--- a/WebJar-app/src/main/webapp/views/smarttablercvx/smarttablercvx.html
+++ b/WebJar-app/src/main/webapp/views/smarttablercvx/smarttablercvx.html
@@ -44,6 +44,15 @@
 			<td></td>
 			<td>{{ (newemployees.dataTable.columnTotals['Sales'].value || 0) | currency }}</td>
 		</tr>
+		<tr>
+			<td>
+		     <div align="center">
+		            <h1>Spring MVC with CSV File Download</h1>
+		            <p><a href="/table/tableCSV">Download CSV #1</a></p>
+		      </div>
+			</td>
+		</tr>
 	</tfoot>
+	
 </table>
 </div>
